[package]
name = "error-info-macros"
description = "Macros for error-info crate"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []

# Appends error summaries to the global array using linkme
summary = []

[dependencies]
darling           = { workspace = true }
heck              = { workspace = true }
macro-field-utils = { workspace = true }
once_cell         = { workspace = true }
proc-macro-error  = { workspace = true }
proc-macro2       = { workspace = true }
quote             = { workspace = true }
regex             = { workspace = true }
syn               = { workspace = true, features = ["extra-traits"] }
